[workspace]
resolver = "2"
members = ["lua-sys", "sol2-sys"]

[workspace.package]
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/sol2-rs"
rust-version = "1.85"

[workspace.dependencies]
# workspace-internal crates
lua-sys = { version = "540.0", path = "lua-sys", default-features = false }
sol2-sys = { version = "0.1", path = "sol2-sys", default-features = false }

# crates.io third-party dependencies
cmake = { version = "0.1.26", default-features = false }
lua-src = { version = "550.0.0", default-features = false }
