[workspace]
resolver = "2"
members = ["sol2-sys"]

[workspace.package]
edition = "2024"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
repository = "https://github.com/juntyr/sol2-rs"
rust-version = "1.88"

[workspace.dependencies]
# workspace-internal crates
sol2-sys = { version = "0.1", path = "sol2-sys", default-features = false }

# crates.io third-party dependencies
cmake = { version = "0.1.26", default-features = false }
mlua-sys = { version = "=0.11.0-rc.1", default-features = false }
