[package]
name = "sol2-sys"
version = "0.1.0+sol2v3.3.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

links = "sol2"

description = "Low-level Rust build for the sol2 C++ <-> Lua API wrapper"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["sol2", "c++", "lua", "bindgen"]

exclude = [
    "/sol2/.github", "/sol2/documentation", "/sol2/examples", "/sol2/scripts",
    "/sol2/tests", "/sol2/.clang-format", "/sol2/.dockerignore",
    "/sol2/.style.yapf", "/sol2/Dockerfile"
]

[dependencies]
mlua-sys = { workspace = true, features = ["lua54", "vendored"] }

[build-dependencies]
cmake = { workspace = true }
